plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.collabit'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ===== Core Dependencies =====
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // ===== Security & OAuth =====
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // ===== JWT =====
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ===== Swagger (API Documentation) =====
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // ===== Utilities =====
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ===== Development Tools =====
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ===== Database Drivers =====
    runtimeOnly 'com.mysql:mysql-connector-j'

    // ===== Testing =====
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-core:3.11.2'

    // ===== Groovy =====
    implementation 'org.codehaus.groovy:groovy-all:3.0.9'

    // ===== AWS S3 =====
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
}


tasks.named('test') {
    useJUnitPlatform()
}
